--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/css/index.css">
     <title>Formulario</title>
   </head>
-  <body>
+  <body style="background-color: lightgreen;">
     <div id="root"></div>
     <script type="module" src="/src/Main.jsx"></script>
   </body>
